# GliderNav

./: AirMap.qml  AirportMenu.qml  AppSettings.qml  AptAsDataDownloadView.qml  AptAsMenuSection.qml  AptAsOptionsView.qml  AsTypeModel.qml  CMakeLists.txt  Info.plist  LogsView.qml  Main.qml  MapSourceModel.qml  MovingMap.qml  README.md  SettingsView.qml  TaskEditView.qml  TasksView.qml  TurnpointDialog.qml  airport.cpp  airport.h  airportfiltermodel.cpp  airportfiltermodel.h  airportlist.cpp  airportlist.h  airportmodel.cpp  airportmodel.h  airspace.cpp  airspace.h  airspacefiltermodel.cpp  airspacefiltermodel.h  airspacemodel.cpp  airspacemodel.h  controller.cpp  controller.h  flightlog.cpp  flightlog.h  flightloglist.cpp  flightloglist.h  flightlogmodel.cpp  flightlogmodel.h  (+12 more)
appIcons/: GliderNavV4.icns
ios/: LaunchScreen.storyboard
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Assets.xcassets/BackgroundColor.colorset/: Contents.json
ios/Assets.xcassets/LaunchImage.imageset/: Contents.json
